[tool.poetry]
name = "twitter-api"
version = "0.2.0"
description = "Aplicativo para consumo da API do Twitter"
authors = ["italosassuncao <italo18sil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
tweepy = "^4.14.0"
pymongo = "^4.6.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
fastapi = "^0.105.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
